--- a/doctorsapp/package.json
+++ b/doctorsapp/package.json
@@ -2,10 +2,12 @@
   "name": "doctorsapp",
   "private": true,
   "dependencies": {
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "turbolinks": "^5.2.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/actioncable": "^6.0.0"
+    "webpack": "^4.41.5",
+    "webpacker": "^4.6.0"
   },
   "version": "0.1.0"
 }
